--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -96,16 +96,19 @@
       "edit": "Edit the title or content",
       "publishNow": "Publish now",
       "alreadyPublished": "Notice is already published, cannot edit its publishing time.",
-      "share": "Copy the link to this notice"
+      "share": "Copy the link to this notice",
+      "delete": "Delete notice"
     },
     "confirm": {
       "publishNowTitle": "Publishing a notice",
-      "publishNowMessage": "Are you sure you want to publish this notice? This operation cannot be undone."
+      "publishNowMessage": "Are you sure you want to publish this notice? This operation cannot be undone.",
+      "deleteTitle": "Deleting a notice",
+      "deleteMessage": "Are you sure you want to delete this notice? This operation cannot be undone."
     },
     "toast": {
       "createSuccess": "Successfully created notice \"{{ name }}\"",
       "publishSuccess": "Successfully published notice \"{{ name }}\"",
-      "copySuccess": "Link copied"
+      "deleteSuccess": "Successfully published notice \"{{ name }}\""
     }
   },
   "common": {
