--- a/src/i18n/pl-PL.json
+++ b/src/i18n/pl-PL.json
@@ -96,15 +96,19 @@
       "edit": "Edytuj tytuł lub treść ogłoszenia",
       "publishNow": "Opublikuj teraz",
       "alreadyPublished": "Ogłoszenie jest już opublikowane, nie można zmienić daty publikacji.",
-      "share": "Skopiuj link do ogłoszenia"
+      "share": "Skopiuj link do ogłoszenia",
+      "delete": "Usuń ogłoszenie"
     },
     "confirm": {
       "publishNowTitle": "Potwierdź publikację ogłoszenia",
-      "publishNowMessage": "Czy na pewno opublikować wybrane ogłoszenie? Tej operacji nie da się cofnąć."
+      "publishNowMessage": "Czy na pewno opublikować wybrane ogłoszenie? Tej operacji nie da się cofnąć.",
+      "deleteTitle": "Potwierdź usunięcie ogłoszenia",
+      "deleteMessage": "Czy na pewno usunąć wybrane ogłoszenie? Tej operacji nie da się cofnąć."
     },
     "toast": {
       "createSuccess": "Utworzono ogłoszenie \"{{ name }}\"",
-      "publishSuccess": "Opublikowano ogłoszenie \"{{ name }}\""
+      "publishSuccess": "Opublikowano ogłoszenie \"{{ name }}\"",
+      "deleteSuccess": "Usunięto ogłoszenie \"{{ name }}\""
     }
   },
   "common": {
