--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -101,6 +101,9 @@
       "SUBMITTED": "Submitted",
       "GRADED": "Graded"
     },
+    "submissions": {
+      "noItems": "There are no submitted solutions yet."
+    },
     "submitSolution": "Submit a solution",
     "taskMessagePlaceholder": "Type your answer or leave additional comment",
     "pastDeadline": "past deadline",
