--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -116,6 +116,10 @@
     },
     "tooltip": {
       "cannotSubmitPastDeadline": "Deadline has passed, you can no longer submit a solution."
+    },
+    "confirm": {
+      "deleteTitle": "Deleting a task",
+      "deleteMessage": "Are you sure you want to delete this task? This operation cannot be undone."
     }
   },
   "notice": {
@@ -133,13 +137,6 @@
       "title": "Modify notice"
     },
     "noItems": "There are no notices yet.",
-    "tooltip": {
-      "edit": "Edit the title or content",
-      "publishNow": "Publish now",
-      "alreadyPublished": "Notice is already published, cannot edit its publishing time.",
-      "share": "Copy the link to this notice",
-      "delete": "Delete notice"
-    },
     "confirm": {
       "publishNowTitle": "Publishing a notice",
       "publishNowMessage": "Are you sure you want to publish this notice? This operation cannot be undone.",
@@ -150,6 +147,15 @@
       "createSuccess": "Successfully created notice \"{{ name }}\"",
       "publishSuccess": "Successfully published notice \"{{ name }}\"",
       "deleteSuccess": "Successfully published notice \"{{ name }}\""
+    }
+  },
+  "actions": {
+    "tooltip": {
+      "edit": "Edit the title or content",
+      "publishNow": "Publish now",
+      "alreadyPublished": "Item is already published, cannot edit its publishing time.",
+      "share": "Copy the link to this item",
+      "delete": "Delete"
     }
   },
   "common": {
