fix import and add missing translations

--- a/src/i18n/pl-PL.json
+++ b/src/i18n/pl-PL.json
@@ -137,13 +137,6 @@
       "title": "Modyfikuj ogłoszenie"
     },
     "noItems": "Brak ogłoszeń.",
-    "tooltip": {
-      "edit": "Edytuj tytuł lub treść ogłoszenia",
-      "publishNow": "Opublikuj teraz",
-      "alreadyPublished": "Ogłoszenie jest już opublikowane, nie można zmienić daty publikacji.",
-      "share": "Skopiuj link do ogłoszenia",
-      "delete": "Usuń ogłoszenie"
-    },
     "confirm": {
       "publishNowTitle": "Potwierdź publikację ogłoszenia",
       "publishNowMessage": "Czy na pewno opublikować wybrane ogłoszenie? Tej operacji nie da się cofnąć.",
@@ -154,6 +147,15 @@
       "createSuccess": "Utworzono ogłoszenie \"{{ name }}\"",
       "publishSuccess": "Opublikowano ogłoszenie \"{{ name }}\"",
       "deleteSuccess": "Usunięto ogłoszenie \"{{ name }}\""
+    }
+  },
+  "actions": {
+    "tooltip": {
+      "edit": "Edytuj tytuł lub treść ogłoszenia",
+      "publishNow": "Opublikuj teraz",
+      "alreadyPublished": "Ogłoszenie jest już opublikowane, nie można zmienić daty publikacji.",
+      "share": "Skopiuj link do ogłoszenia",
+      "delete": "Usuń ogłoszenie"
     }
   },
   "common": {
