feature: task list as a masonry

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -61,6 +61,10 @@
     }
   },
   "task": {
+    "title": {
+      "task": "All tasks",
+      "homework": "All homework"
+    },
     "create": {
       "title": {
         "task": "Create new task",
