feature: add start time to TaskCard

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -120,6 +120,8 @@
       "homework": "There is no homework yet."
     },
     "tooltip": {
+      "startTime": "Start time",
+      "endTime": "Deadline",
       "cannotSubmitPastDeadline": "Deadline has passed, you can no longer submit a solution."
     },
     "confirm": {
