--- a/src/i18n/pl-PL.json
+++ b/src/i18n/pl-PL.json
@@ -120,6 +120,8 @@
       "homework": "Brak zadań domowych."
     },
     "tooltip": {
+      "startTime": "Czas rozpoczęcia",
+      "endTime": "Termin oddania",
       "cannotSubmitPastDeadline": "Nie można przesłać rozwiązania gdyż termin minął."
     },
     "confirm": {
