feature: edit task view (#56)

--- a/src/i18n/pl-PL.json
+++ b/src/i18n/pl-PL.json
@@ -71,7 +71,7 @@
         "homework": "Utwórz nowe zadanie domowe"
       }
     },
-    "update": {
+    "edit": {
       "title": {
         "task": "Modyfikuj zadanie",
         "homework": "Modyfikuj zadanie domowe"
@@ -96,7 +96,8 @@
       "mandatory": {
         "true": "Obowiązkowe",
         "false": "Dodatkowe (nieobowiązkowe)"
-      }
+      },
+      "alreadyStarted": "Zmiana jest niedostępna, gdyż zadanie jest aktywne bądź zostało zakończone."
     },
     "task": "Zadanie",
     "homework": "Zadanie domowe",
@@ -119,11 +120,16 @@
       "homework": "Brak zadań domowych."
     },
     "tooltip": {
+      "startTime": "Czas rozpoczęcia",
+      "endTime": "Termin oddania",
       "cannotSubmitPastDeadline": "Nie można przesłać rozwiązania gdyż termin minął."
     },
     "confirm": {
       "deleteTitle": "Potwierdź usunięcie zadania",
       "deleteMessage": "Czy na pewno usunąć wybrane zadanie? Tej operacji nie da się cofnąć."
+    },
+    "toast": {
+      "updateSuccess": "Zaktualizowano zadanie \"{{ name }}\""
     }
   },
   "notice": {
@@ -149,17 +155,19 @@
     },
     "toast": {
       "createSuccess": "Utworzono ogłoszenie \"{{ name }}\"",
+      "updateSuccess": "Zaktualizowano ogłoszenie \"{{ name }}\"",
       "publishSuccess": "Opublikowano ogłoszenie \"{{ name }}\"",
       "deleteSuccess": "Usunięto ogłoszenie \"{{ name }}\""
     }
   },
   "actions": {
     "tooltip": {
-      "edit": "Edytuj tytuł lub treść ogłoszenia",
+      "edit": "Edytuj ten element",
+      "editDisabled": "Nie można już modyfikować tego elementu",
       "publishNow": "Opublikuj teraz",
-      "alreadyPublished": "Ogłoszenie jest już opublikowane, nie można zmienić daty publikacji.",
-      "share": "Skopiuj link do ogłoszenia",
-      "delete": "Usuń ogłoszenie"
+      "alreadyPublished": "Element jest już opublikowany, nie można zmienić jego daty publikacji.",
+      "share": "Skopiuj link",
+      "delete": "Usuń"
     }
   },
   "common": {
@@ -350,6 +358,7 @@
     "button": "Powrót do strony głównej"
   },
   "error": {
+    "ERROR": "Wystąpił błąd",
     "UNKNOWN_ERROR": "Nieznany błąd.",
     "INVALID_FORM": "Formularz zawiera błędy.",
     "FILE_TOO_BIG": "Zbyt duży plik. Maksymalny dopuszczalny rozmiar to {{ maxSize }}.",
@@ -376,6 +385,8 @@
     "SUBJECT_TEACHER_REQUIRED": "Wybierz nauczyciela prowadzącego przedmiot.",
     "PUBLISH_TIME_REQUIRED": "Określ datę publikacji.",
     "NOTICE_NOT_FOUND": "Nie znaleziono ogłoszenia",
-    "TASK_DURATION_TOO_SHORT": "Czas trwania zadania jest zbyt krótki. Wymagane minimum to {{ min }} minut."
+    "TASK_DURATION_TOO_SHORT": "Czas trwania zadania jest zbyt krótki. Wymagane minimum to {{ min }} minut.",
+    "TASK_DURATION_TOO_LONG": "Czas trwania zadania jest zbyt długi. Zwykłe zadanie nie może trwać dłużej niż {{ max }} godzin.",
+    "HOMEWORK_DURATION_TOO_LONG": "Czas trwania zadania dmowego jest zbyt długo. Nie powinien wynosić więcej niż 12 miesięcy."
   }
 }
