feature: Task Submissions List & improved Task Details

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -107,7 +107,9 @@
       "graded": "Graded"
     },
     "submissions": {
-      "noItems": "There are no submitted solutions yet."
+      "noItems": "There are no submitted solutions yet.",
+      "notSubmittedYet": "Not submitted yet",
+      "yourSubmissionToTask": "Your submission to task"
     },
     "submitSolution": "Submit a solution",
     "taskMessagePlaceholder": "Type your answer or leave additional comment",
