--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -112,7 +112,7 @@
       "yourSubmissionToTask": "Your submission to task",
       "message": "Message",
       "attachedFile": "Attached file",
-      "downloadFile": "Download file",
+      "downloadFile": "Download",
       "sentOn": "Sent on"
     },
     "submitSolution": "Submit a solution",
