feature: Task Submissions List & improved Task Details (#67)

--- a/src/i18n/en-US.json
+++ b/src/i18n/en-US.json
@@ -107,7 +107,13 @@
       "graded": "Graded"
     },
     "submissions": {
-      "noItems": "There are no submitted solutions yet."
+      "noItems": "There are no submitted solutions yet.",
+      "notSubmittedYet": "Not submitted yet",
+      "yourSubmissionToTask": "Your submission to task",
+      "message": "Message",
+      "attachedFile": "Attached file",
+      "downloadFile": "Download",
+      "sentOn": "Sent on"
     },
     "submitSolution": "Submit a solution",
     "taskMessagePlaceholder": "Type your answer or leave additional comment",
